
  Zookeeper 3.3.1 bundle is now available. See DOSGI-100 for more information.

* org.apache.cxf.dosgi:cxf-dosgi-remote-service-admin-interfaces

  org.osgi:org.osgi.enterprize:4.2.0 artifact is now available. See DOSGI-104 for more information.

Many dependencies have been updated, including the update to CXF 2.5.1. See also DOSGI-96.

Additionally, a number of bugs has been fixed including:

DOSGI-107   Better support for a wsdl configuration type 	
DOSGI-97    Automatically unregister HTTP servlets/resources if exported service goes down 	
DOSGI-75    CXF Distributed OSGi isn't using org.apache.cxf.common.logging.LogUtils 
DOSGI-102   DOSGI RI can not map invocation exceptions to custom exceptions on the client side
DOSGI-91    DOSGI RS Proxies ignore ResponseExceptionMapper providers
DOSGI-76    EndpointListener.endpointRemoved
DOSGI-94    Enhancement to deal with registered services that might have been proxied
DOSGI-103   Improve multi-bundle distro configuration for Felix
DOSGI-77    NullPointerException from Distributed OSGI when bundle with wanted properties is started.
DOSGI-79    RemoteServiceAdmin.getImportedEndpoints() returns collection of incorrect type
DOSGI-85    Unable to export services started after Topology manager
DOSGI-105   Update greeter_rest demo to use OSGI HttpService 	 


Apache CXF Distributed OSGi 1.2 Release Notes
=============================================

In addition to providing the Reference Implementation to the OSGi Remote
Services Specification, the CXF Distributed OSGi 1.2 release now also
provides the Reference Implementation of the OSGi Remote Service Admin
Specification version 1.0, Chapter 122 in the OSGi Enterprise
Specification.

To achieve compliance with the RSA specification a major refactoring has
been done on the code base.

For the new features applicable to the RSA specification, see chapter
122 in the OSGi Enterprise Spec (http://www.osgi.org/Download/Release4V42).
