@@ -71,10 +71,7 @@ public class JaxRSHttpServiceConfigurationTypeHandler extends HttpServiceConfigu
         if (providers != null && providers.size() > 0) {
             factory.setProviders(providers);
         }
-        addInterceptors(factory, callingContext, sd, Constants.RS_IN_INTERCEPTORS_PROP_KEY);
-        addInterceptors(factory, callingContext, sd, Constants.RS_OUT_INTERCEPTORS_PROP_KEY);
-        addFeatures(factory, callingContext, sd, Constants.RS_FEATURES_PROP_KEY);
-        addContextProperties(factory, callingContext, sd, Constants.RS_CONTEXT_PROPS_PROP_KEY);
+        addRsInterceptorsFeaturesProps(factory, callingContext, sd);
         
         String address = constructAddress(dswContext, contextRoot);
 
